test/expected/explain_typedef_ci32.out
explain typedef char int32_t
                     ^
22: error: type "char" redefinition incompatible with original type "int"
